Fixed dark mode not persisting
Also added a fun counter

--- a/src/styles.css
+++ b/src/styles.css
@@ -291,7 +291,6 @@ body.dark ul img {
     height: 100px;
     width: 200px;
     font-size: 30px;
-    position: fixed;
     color: #773399;
     background-color: #d7e6fa;
     border: 10px solid #b7c4d4;
@@ -301,17 +300,9 @@ body.dark ul img {
     transform: translate(-50%, -50%);
 }
 body.dark #extrasButton {
-    height: 100px;
-    width: 200px;
-    font-size: 30px;
-    position: fixed;
     color: #88CC66;
     background-color: #003380;
     border: 10px solid #002a68;
-    border-radius: 10px;
-    left: 50vw;
-    top: 50vh;
-    transform: translate(-50%, -50%);
 }
 
 button:hover, a:hover {
@@ -336,12 +327,12 @@ body.dark button:hover, body.dark a:hover {
     }
 }
 
-#extras {
+#extrasBackground {
     position: fixed;
     pointer-events: none;
 }
 
-#extras #box1{
+#extrasBackground #box1{
     height: 800px;
     width: 800px;
     top: 5%;
@@ -350,7 +341,7 @@ body.dark button:hover, body.dark a:hover {
     transition: scale 0.8s ease-in-out;
 }
 
-#extras #box2{
+#extrasBackground #box2{
     height: 700px;
     width: 1200px;
     top: 50%;
@@ -359,7 +350,7 @@ body.dark button:hover, body.dark a:hover {
     transition: scale 1s ease-in-out;
 }
 
-#extras #box3{
+#extrasBackground #box3{
     height: 700px;
     width: 700px;
     bottom: 30%;
@@ -368,7 +359,7 @@ body.dark button:hover, body.dark a:hover {
     transition: scale 0.6s ease-in-out;
 }
 
-body.dark #extras #box1{
+body.dark #extrasBackground #box1{
     height: 800px;
     width: 800px;
     top: 5%;
@@ -377,7 +368,7 @@ body.dark #extras #box1{
     transition: scale 0.8s ease-in-out;
 }
 
-body.dark #extras #box2{
+body.dark #extrasBackground #box2{
     height: 700px;
     width: 1200px;
     top: 50%;
